--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -17,6 +17,8 @@
 @import "./core/symbol";
 @import "./core/modal";
 @import "./core/accordion";
+@import "./core/scroller";
+@import "./core/filter";
 
 
 //mixins
