--- a/app/views/components/_article_main.html.erb
+++ b/app/views/components/_article_main.html.erb
@@ -1,7 +1,7 @@
 <% article_presenter = ArticlePresenter.new(article) %>
 
-<article class="mb-10">
-  <div class="row">
+<article class="mb-5 mb-lg-10">
+  <div class="row g-2 g-lg-5">
     <div class="col col-12 col-md-5">
       <div class="w-100">
         <a title="<%= article.title %>" href="<%= article_path(article) %>" class="illustration">
