--- a/app/views/article/collaboration_with_facebook.html.erb
+++ b/app/views/article/collaboration_with_facebook.html.erb
@@ -1,17 +1,26 @@
 <% content_for(:title, get_web_content("article.collaboration_with_facebook", "title")) %>
 <% content_for(:description, strip_tags(get_web_content("article.collaboration_with_facebook", "intro")).truncate(230)) %>
 
-<article class="container-article-collaboration_with_facebook">
-  <h1><%= get_web_content("article.collaboration_with_facebook", "title") %></h1>
-  <%= raw(get_web_content("article.collaboration_with_facebook", "intro")) %>
-</article>
+<div class="row g-5 g-lg-10">
+  <div class="col col-12 col-lg-8">
+    <h1 class="display-4 fw-bold m-0 p-0"><%= get_web_content("article.collaboration_with_facebook", "title") %></h1>
+    <div class="fs-5 mt-5">
+      <%= raw(get_web_content("article.collaboration_with_facebook", "intro")) %>
+    </div>
+  </div>
+  <div class="col col-12">
+    <div class="row g-5 g-lg-10">
+      <% @articles.each do |article| %>
+      <div class="col col-12 col-lg-6">
+        <%= render partial: "components/article_main", object: article, as: :article %>
+      </div>
+      <% end %>
+    </div>
+  </div>
+  <div class="col col-12">
+    <div class="d-flex justify-content-center mt-5">
+      <%= paginate(@articles) %>
+    </div>
+  </div>
 
-<% if @page_number %>
-  <p class="full-width"><b>Strana <%= @page_number %></b> z archivu spolupráce s Facebookem:</p>
-<% end %>
-
-<% @articles.each do |article| %>
-  <%= render partial: "article/preview", object: article, as: :article %>
-<% end %>
-
-<%= paginate(@articles) %>
+</div>
