--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -1,7 +1,11 @@
 <section class="section">
   <%= render(partial: @intro_partial) %>
 </section>
-<section class="section mt-10">
+<section
+  class="section mt-10"
+  data-controller="components--overview"
+
+>
   <h2 class="fs-1 fw-bold"><%= @all.size %> sledovaných slibů</h2>
   <div class="">
     <div class="d-flex my-10">
@@ -55,10 +59,10 @@
         </div>
       <% end %>
     </div>
-    <div class="d-flex">
+    <div class="d-flex rounded-pill overflow-hidden h-30px">
       <% @promise_rating_keys.each do |promise_rating_key| %>
         <div class="" style="width: <%= @promise_rating_percents[promise_rating_key] %>%">
-          <span class="d-block h-25px mb-4 <%= (
+          <span class="d-block h-100 mb-4 <%= (
             {
               PromiseRating::FULFILLED => "bg-primary",
               PromiseRating::IN_PROGRESS => "bg-secondary",
@@ -68,6 +72,15 @@
 
             }[promise_rating_key]
           ) %>"></span>
+        </div>
+        <div class="">
+
+        </div>
+      <% end %>
+    </div>
+    <div class="d-flex mt-5">
+      <% @promise_rating_keys.each do |promise_rating_key| %>
+        <div class="" style="width: <%= @promise_rating_percents[promise_rating_key] %>%">
           <span class="fs-4 fw-bold  <%= @promise_rating_percents[promise_rating_key] %>%">
             <span class="d-block h-25px mb-4 <%= (
               {
@@ -80,14 +93,23 @@
               }[promise_rating_key]
             ) %>"><%= @promise_rating_percents[promise_rating_key] %> %</span>
         </div>
+        <div class="">
+
+        </div>
       <% end %>
     </div>
   </div>
   <div
-    data-controller="components--filter"
-    data-components--filter-content-cols="col col-12 col-lg-8"
+    data-controller="components--filter components--overview"
+    data-components--filter-open-cols="col col-12 col-lg-8"
+    data-components--filter-close-cols="col col-12"
     data-components--filter-open-label="Skrýt filtry"
     data-components--filter-close-label="Zobrazit filtry"
+    data-components--filter-close-empty="true"
+    data-components--overview-open-preview-label="Skrýt detail"
+    data-components--overview-close-preview-label="Zobrazit detail"
+    data-components--overview-open-detail-label="Skrýt celé odůvodnění"
+    data-components--overview-close-detail-label="Zobrazit celé odůvodnění"
   >
     <div class="row g-10 my-10">
       <div class="col col-12 col-lg-4">
@@ -100,24 +122,33 @@
     <div class="row g-10">
       <div class="col col-12 col-lg-4" data-target="components--filter.filter">
         <div class="bg-light rounded-l p-5">
-          <div class="accordion w-100 mb-5" data-controller="components--accordion">
+          <div class="filter w-100 mb-5">
             <div
-              class="accordion-link d-flex align-items-center justify-content-between w-100 min-h-40px"
-              data-target="components--accordion.link"
-              data-action="click->components--accordion#toggle"
+              class="filter-link d-flex align-items-center justify-content-between w-100 min-h-40px"
+              data-action="click->components--filter#toggleLink"
+              data-target="components--filter.filterLink"
               aria-show="true"
             >
               <span class="fs-6 fw-bold">Oblast</span>
-              <span class="accordion-icon">
+              <span class="filter-icon">
                 <svg width="23" height="12" viewBox="0 0 23 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M1 0.597656L11.646 11.2437L22.2435 0.646237" stroke="#111827"/>
                 </svg>
               </span>
             </div>
-            <div class="accordion-content" data-target="components--accordion.content">
+            <div class="filter-content">
               <% @area_tags.each do |area_tag| %>
-              <div class="check-btn py-2">
-                <input type="checkbox" name="strana">
+              <div
+                class="check-btn py-2"
+
+              >
+                <input
+                  type="checkbox"
+                  data-target="components--filter.filterCheckbox"
+                  data-action="change->components--filter#toggleFilter"
+                  data-filter-value="<%= area_tag.id %>"
+                  data-filter-type="oblast"
+                >
                 <span class="checkmark"></span>
                 <span class="small fw-bold me-2"><%= area_tag.name %></span>
               </div>
@@ -125,24 +156,30 @@
             </div>
           </div>
           <div class="separator bg-dark mb-5"></div>
-          <div class="accordion w-100 mb-5" data-controller="components--accordion">
+          <div class="filter w-100 mb-5">
             <div
-              class="accordion-link d-flex align-items-center justify-content-between w-100 min-h-40px"
-              data-target="components--accordion.link"
-              data-action="click->components--accordion#toggle"
+              class="filter-link d-flex align-items-center justify-content-between w-100 min-h-40px"
+              data-action="click->components--filter#toggleLink"
+              data-target="components--filter.filterLink"
               aria-show="true"
             >
               <span class="fs-6 fw-bold">Hodnocení</span>
-              <span class="accordion-icon">
+              <span class="filter-icon">
                 <svg width="23" height="12" viewBox="0 0 23 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M1 0.597656L11.646 11.2437L22.2435 0.646237" stroke="#111827"/>
                 </svg>
               </span>
             </div>
-            <div class="accordion-content" data-target="components--accordion.content">
+            <div class="filter-content">
               <% @promise_rating_keys.each do |promise_rating_key| %>
               <div class="check-btn py-2">
-                <input type="checkbox" name="strana">
+                <input
+                  type="checkbox"
+                  data-target="components--filter.filterCheckbox"
+                  data-action="change->components--filter#toggleFilter"
+                  data-filter-value="<%= promise_rating_key %>"
+                  data-filter-type="hodnoceni"
+                >
                 <span class="checkmark"></span>
                 <span class="small fw-bold me-2">
                   <%= (
@@ -161,14 +198,14 @@
           </div>
           <div class="separator bg-dark mb-5"></div>
           <div class="w-100 mt-5">
-            <a class="btn w-100">
+            <a class="btn w-100" href="#" data-action="click->components--filter#clearFilter">
               <span class="text-white">Zrušit filtry</span>
             </a>
           </div>
         </div>
       </div>
 
-      <div class="col col-12 col-lg-8 " data-target="components--filter.content">
+      <div class="col col-12 col-lg-8 d-none d-lg-flex" data-target="components--filter.content" >
         <div class="row g-6 py-2">
           <div class="col col-12 col-lg-5">
 
@@ -185,14 +222,8 @@
         </div>
         <% @all.each do |statement| %>
         <div class="separator bg-gray"></div>
-        <div
-          class="accordion w-100"
-          data-controller="components--accordion"
-          data-components--accordion-open-label="skrýt detail"
-          data-components--accordion-close-label="zobrazit detail"
-
-        >
-          <div class="row g-6 py-2 align-items-center">
+        <div class="accordion w-100" id="slib-<%= statement.id %>" data-target="components--overview.item">
+          <div class="row g-3 g-lf-6 py-2 align-items-center">
             <div class="col col-12 col-lg-5">
               <span class="fs-6 fw-bold"><%= statement.title %></span>
             </div>
@@ -201,7 +232,6 @@
             </div>
             <div class="col col-12 col-lg-2">
               <div class="d-flex align-items-center">
-
                 <span class="w-30px h-30px min-w-30px d-flex align-items-center justify-content-center rounded-circle me-1 bg-<%= @promises_list_rating_classes[statement.assessment.promise_rating.key] %>">
                   <% if statement.assessment.promise_rating.key.dasherize == "fulfilled" %>
                     <svg width="17" height="13" viewBox="0 0 17 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -224,24 +254,23 @@
                 </span>
               </div>
             </div>
-            <div class="col col-12 col-lg-3 d-flex justify-content-end">
+            <div class="col col-12 col-lg-3 d-flex justify-content-start justify-content-lg-end">
               <div class="">
                 <a
                   class="btn outline min-h-40px min-w-150px"
-                  data-target="components--accordion.link"
-                  data-action="click->components--accordion#toggle"
-                  aria-show="false"
+                  data-action="click->components--overview#togglePreview"
+                  data-accordion-url="slib-<%= statement.id %>"
+
                 >
-                  <span class="fs-7" data-target="components--accordion.label">zobrazit detail</span>
+                  <span class="accordion-label fs-7" >Zobrazit detail</span>
                 </a>
               </div>
             </div>
           </div>
-          <div class="accordion-content close" data-target="components--accordion.content" data-action="click->components--accordion#checkHeight">
-            <div class="row g-6">
+          <div class="accordion-content" aria-show="false">
+            <div class="row g-3 g-lg-6">
               <div class="col col-12 col-lg-5">
                 <blockquote class="p-3 fs-6 bg-dark text-white rounded-m mb-2 position-relative min-h-50px" data-target="statement--detail.blockquote">
-                  <span class="popover-arrow arrow-east"></span>
                   <span class="fs-6 position-relative"><%= content_to_html(statement.content) %></span>
                   <div>
                     <a class="text-white fs-7" href="<%= @get_statement_source_url.call(statement) %>" target="_blank"><%= @get_statement_source_label.call(statement) %></a>
@@ -251,24 +280,25 @@
               <div class="col col-12 col-lg-7">
                 <% unless statement.assessment.short_explanation.nil? %>
                   <div
-                   class="accordion py-3"
-                   data-controller="components--accordion"
-                   data-components--accordion-open-label="skrýt celé odůvodnění"
-                   data-components--accordion-close-label="zobrazit celé odůvodnění"
+                   class="promise-detail py-3"
                   >
                     <div class="">
                       <p class="fs-6"><%= statement.assessment.short_explanation %></p>
                     </div>
-                    <div class="accordion-content close fs-6" data-target="components--accordion.content">
-                      <%= raw(to_lazy_loading_iframes_and_images(statement.assessment.explanation_html)) %>
+                    <div class="accordion-detail close fs-6" aria-show="false">
+                      <div class="py-2 py-lg-5">
+                        <div class="scroll-vertical mh-400px">
+                          <%= raw(to_lazy_loading_iframes_and_images(statement.assessment.explanation_html)) %>
+                        </div>
+                      </div>
                     </div>
-                    <div class="d-flex justify-content-between align-items-center">
+                    <div class="d-block d-lg-flex justify-content-between align-items-center">
                       <a
-                        data-target="components--accordion.link"
-                        data-action="click->components--accordion#toggle"
-                        aria-show="false"
+                        class="link"
+                        data-action="click->components--overview#toggleDetail"
+                        data-accordion-url="slib-<%= statement.id %>"
                       >
-                        <span class="fs-7" data-target="components--accordion.label">zobrazit celé odůvodnění</span>
+                        <span class="accordion-label-detail fs-7" >zobrazit celé odůvodnění</span>
                       </a>
                       <% if @allow_embed %>
                         <a class="d-flex text-gray align-items-center text-none" data-statement-id="<%= statement.id %>">
@@ -279,7 +309,6 @@
                           </svg>
                           <span class="ms-1">embed</span>
                         </a>
-
                       <% end %>
                       <a class="d-flex text-gray align-items-center text-none" href="<%= promise_permalink(statement) %>">
                         <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -301,8 +330,6 @@
             </div>
           </div>
         </div>
-
-
         <% end %>
       </div>
     </div>
