--- a/app/views/statement/_elastic_filterable_list.html.erb
+++ b/app/views/statement/_elastic_filterable_list.html.erb
@@ -12,10 +12,11 @@ wide_display = true if local_assigns[:wide_display].nil?
 <div
   class="row g-10 mt-10"
   data-controller="components--filter"
-  data-components--filter-content-cols="col col-12 col-lg-8"
+  data-components--filter-open-cols="col col-12 col-lg-8"
+  data-components--filter-close-cols="col col-12"
   data-components--filter-open-label="Skrýt filtry"
   data-components--filter-close-label="Zobrazit filtry"
-  data-speaker--index-no-filters-url="<%= speakers_path() %>"
+  data-components--filter-close-empty="true"
 >
   <div class="col col-12 col-lg-4">
     <a class="btn w-100" data-action="click->components--filter#toggle" aria-show="true">
@@ -32,24 +33,30 @@ wide_display = true if local_assigns[:wide_display].nil?
   <div class="col col-12 col-lg-4" data-target="components--filter.filter">
     <div class="bg-light rounded-l p-5">
       <% if enable_filters.include?(:tag_id) && statement_elastic_filterable_list_presenter.filter_options[:tag_id].size > 0 %>
-        <div class="accordion w-100 mb-5" data-controller="components--accordion">
+        <div class="filter w-100 mb-5">
           <div
-            class="accordion-link d-flex align-items-center justify-content-between w-100 min-h-40px"
-            data-target="components--accordion.link"
-            data-action="click->components--accordion#toggle"
+            class="filter-link d-flex align-items-center justify-content-between w-100 min-h-40px"
+            data-action="click->components--filter#toggleLink"
+            data-target="components--filter.filterLink"
             aria-show="true"
           >
             <span class="fs-6 fw-bold">Všechna témata</span>
-            <span class="accordion-icon">
+            <span class="filter-icon">
               <svg width="23" height="12" viewBox="0 0 23 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1 0.597656L11.646 11.2437L22.2435 0.646237" stroke="#111827"/>
               </svg>
             </span>
           </div>
-          <div class="accordion-content" data-target="components--accordion.content">
+          <div class="filter-content" data-target="components--accordion.content">
             <% statement_elastic_filterable_list_presenter.filter_options[:tag_id].each do |filter_option| %>
             <div class="check-btn py-2">
-              <input type="checkbox">
+              <input
+                type="checkbox"
+                data-target="components--filter.filterCheckbox"
+                data-action="change->components--filter#toggleFilter"
+                data-filter-value="<%= filter_option[:value] %>"
+                data-filter-type="politik"
+              >
               <span class="checkmark"></span>
               <span class="small fw-bold me-2"><%= filter_option[:label] %></span>
               <span class="smallest min-w-40px"><%= number_with_delimiter(filter_option[:count], delimiter: " ") %> <%= cs_pluralize(filter_option[:count], "výrok", "výroky", "výroků") %></span>
@@ -59,24 +66,31 @@ wide_display = true if local_assigns[:wide_display].nil?
         </div>
       <% end %>
       <% if enable_filters.include?(:veracity_key) %>
-        <div class="accordion w-100 mb-5" data-controller="components--accordion">
+        <div class="filter w-100 mb-5">
           <div
-            class="accordion-link d-flex align-items-center justify-content-between w-100 min-h-40px"
-            data-target="components--accordion.link"
-            data-action="click->components--accordion#toggle"
+            class="filter-link d-flex align-items-center justify-content-between w-100 min-h-40px"
+            data-action="click->components--filter#toggleLink"
+            data-target="components--filter.filterLink"
             aria-show="true"
           >
             <span class="fs-6 fw-bold">Všechna hodnocení</span>
-            <span class="accordion-icon">
+            <span class="filter-icon">
               <svg width="23" height="12" viewBox="0 0 23 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1 0.597656L11.646 11.2437L22.2435 0.646237" stroke="#111827"/>
               </svg>
             </span>
           </div>
-          <div class="accordion-content" data-target="components--accordion.content">
+          <div class="filter-content">
             <% statement_elastic_filterable_list_presenter.filter_options[:veracity_key].each do |filter_option| %>
             <div class="check-btn py-2 <% if filter_option[:count] == 0 %>disabled<% end %>">
-              <input type="checkbox" <% if filter_option[:count] == 0 %>disabled<% end %>>
+              <input
+                type="checkbox"
+                <% if filter_option[:count] == 0 %>disabled<% end %>
+                data-target="components--filter.filterCheckbox"
+                data-action="change->components--filter#toggleFilter"
+                data-filter-value="<%= filter_option[:value] %>"
+                data-filter-type="hodnoceni"
+              >
               <span class="checkmark"></span>
               <span class="small fw-bold me-2"><%= filter_option[:label] %></span>
               <span class="smallest min-w-40px"><%= number_with_delimiter(filter_option[:count], delimiter: " ") %> <%= cs_pluralize(filter_option[:count], "výrok", "výroky", "výroků") %></span>
@@ -88,11 +102,11 @@ wide_display = true if local_assigns[:wide_display].nil?
       <% end %>
 
       <% if enable_filters.include?(:released_year) && statement_elastic_filterable_list_presenter.filter_options[:released_year].size > 0 %>
-        <div class="accordion w-100 mb-5" data-controller="components--accordion">
+        <div class="filter w-100 mb-5">
           <div
-            class="accordion-link d-flex align-items-center justify-content-between w-100 min-h-40px"
-            data-target="components--accordion.link"
-            data-action="click->components--accordion#toggle"
+            class="filter-link d-flex align-items-center justify-content-between w-100 min-h-40px"
+            data-action="click->components--filter#toggleLink"
+            data-target="components--filter.filterLink"
             aria-show="true"
           >
             <span class="fs-6 fw-bold">Všechny roky</span>
@@ -102,10 +116,17 @@ wide_display = true if local_assigns[:wide_display].nil?
               </svg>
             </span>
           </div>
-          <div class="accordion-content" data-target="components--accordion.content">
+          <div class="filter-content" data-target="components--accordion.content">
             <% statement_elastic_filterable_list_presenter.filter_options[:released_year].each do |filter_option| %>
             <div class="check-btn py-2 <% if filter_option[:count] == 0 %>disabled<% end %>">
-              <input type="checkbox" <% if filter_option[:count] == 0 %>disabled<% end %>>
+              <input
+                type="checkbox"
+                <% if filter_option[:count] == 0 %>disabled<% end %>
+                data-target="components--filter.filterCheckbox"
+                data-action="change->components--filter#toggleFilter"
+                data-filter-value="<%= filter_option[:value] %>"
+                data-filter-type="rok"
+              >
               <span class="checkmark"></span>
               <span class="small fw-bold me-2"><%= filter_option[:label] %></span>
               <span class="smallest min-w-40px"><%= number_with_delimiter(filter_option[:count], delimiter: " ") %> <%= cs_pluralize(filter_option[:count], "výrok", "výroky", "výroků") %></span>
@@ -153,6 +174,8 @@ wide_display = true if local_assigns[:wide_display].nil?
     <% end %>
   </div>
   <div class="col col-12">
-    <%= paginate(statement_elastic_filterable_list_presenter.paginated_statements) %>
+    <div class="d-flex justify-content-center mt-5">
+        <%= paginate(statement_elastic_filterable_list_presenter.paginated_statements) %>
+    </div>
   </div>
 </div>
