--- a/app/views/statement/show.html.erb
+++ b/app/views/statement/show.html.erb
@@ -3,69 +3,71 @@
 <% content_for(:image_src, @statement.preview_image.attached? ? polymorphic_url(@statement.preview_image) : nil) %>
 <% content_for(:twitter_card, 'summary_large_image') %>
 
-<section class="section">
-  <div class="row g-10">
-    <div class="col col-12 col-lg-2">
-      <a href="<%= speaker_path(@statement.speaker) %>" class="d-block position-relative">
-        <span class="symbol symbol-square symbol-circle">
-          <%= render(PortraitComponent.new(speaker: @statement.speaker)) %>
-        </span>
-        <div class="symbol-label d-flex align-items-center justify-content-center w-45px h-45px rounded-circle bg-dark">
-          <span class="smallest text-white lh-1 text-center p-2"><%= @statement.source_speaker.body.short_name %></span>
-        </div>
-      </a>
-      <div class="mt-2 text-center w-100">
-        <h3 class="fs-6 fs-bold">
-          <%= @statement.source_speaker.full_name %>
-        </h3>
+<div class="row g-10">
+  <div class="col col-4 col-md-2">
+    <a href="<%= speaker_path(@statement.speaker) %>" class="d-block position-relative">
+      <span class="symbol symbol-square symbol-circle">
+        <%= render(PortraitComponent.new(speaker: @statement.speaker)) %>
+      </span>
+      <div class="symbol-label d-flex align-items-center justify-content-center w-50px h-50px rounded-circle bg-dark">
+        <span class="smallest text-white lh-1 text-center p-2"><%= @statement.source_speaker.body.short_name %></span>
       </div>
-    </div>
-    <div class="col col-12 col-lg-8">
-      <blockquote class="p-3 fs-6 bg-dark text-white rounded-m mb-2 position-relative min-h-50px" data-target="statement--detail.blockquote">
-        <span class="popover-arrow arrow-east"></span>
-        <span class="fs-6 position-relative"><%= content_to_html(@statement.content) %></span>
-      </blockquote>
-      <div class="mb-10">
-        <cite><%= @statement.source.medium.name %>, <span class="date"><%= raw(l(@statement.source.released_at, format: :long)) %></span></cite>
-        <% if @statement.tags.size > 0 %>
-          <div class="d-flex align-items-center">
-            <svg class="me-2" width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M10.6211 0.9425L18.6536 8.9675C18.7239 9.03722 18.7797 9.12017 18.8178 9.21157C18.8558 9.30296 18.8754 9.40099 18.8754 9.5C18.8754 9.59901 18.8558 9.69704 18.8178 9.78843C18.7797 9.87983 18.7239 9.96278 18.6536 10.0325L17.1536 11.5325L16.0886 10.4675L17.0636 9.5L9.56359 2H3.87109V3.5H2.37109V2C2.37109 1.60218 2.52913 1.22064 2.81043 0.93934C3.09174 0.658035 3.47327 0.5 3.87109 0.5H9.56359C9.96078 0.501675 10.3411 0.660809 10.6211 0.9425ZM9.87109 21.5C9.77239 21.5006 9.67454 21.4817 9.58316 21.4443C9.49179 21.407 9.40867 21.352 9.33859 21.2825L1.31359 13.25C1.0319 12.97 0.872768 12.5897 0.871094 12.1925V6.5C0.871094 6.10218 1.02913 5.72064 1.31043 5.43934C1.59174 5.15804 1.97327 5 2.37109 5H8.06359C8.46078 5.00167 8.84108 5.16081 9.12109 5.4425L17.1536 13.4675C17.2239 13.5372 17.2797 13.6202 17.3178 13.7116C17.3558 13.803 17.3754 13.901 17.3754 14C17.3754 14.099 17.3558 14.197 17.3178 14.2884C17.2797 14.3798 17.2239 14.4628 17.1536 14.5325L10.4036 21.2825C10.3335 21.352 10.2504 21.407 10.159 21.4443C10.0676 21.4817 9.9698 21.5006 9.87109 21.5ZM2.37109 6.5V12.1925L9.87109 19.6925L15.5636 14L8.06359 6.5H2.37109ZM5.37109 11C6.19952 11 6.87109 10.3284 6.87109 9.5C6.87109 8.67157 6.19952 8 5.37109 8C4.54267 8 3.87109 8.67157 3.87109 9.5C3.87109 10.3284 4.54267 11 5.37109 11Z" fill="#111827"/>
-            </svg>
-
-            <% @statement.tags.each do |tag| %>
-              <div class="me-2"><%= tag.name %>,</div>
-            <% end %>
-          </div>
-        <% end %>
-      </div>
-      <div class="d-flex align-items-center mb-10">
-        <h1 class="display-5 fw-bold me-3">Tento výrok byl ověřen jako</h1>
-        <div class="d-flex align-items-center">
-          <span class="display-5 text-uppercase fw-bold">
-            <%= @statement.approved_assessment.veracity.name.downcase %>
-          </span>
-        </div>
-      </div>
-      <% unless @statement.approved_assessment.short_explanation.nil? %>
-      <div class="separator bg-gray mb-10"></div>
-      <div class="mb-10">
-        <h3 class="display-5 fw-bold mb-5">Skrácené odůvodnění</h3>
-        <p class="fs-5"><%= @statement.approved_assessment.short_explanation %></p>
-      </div>
-      <% end %>
-      <div class="separator bg-gray mb-10"></div>
-      <div class="mb-10">
-        <h3 class="display-5 fw-bold mb-5">Plné odůvodnění</h3>
-        <%= raw(@statement.approved_assessment.explanation_html) %>
-      </div>
-      <div class="separator bg-gray mb-10"></div>
-      <div class="">
-        <h3 class="display-5 fw-bold mb-5">Výrok jsme zmínili</h3>
-        <% @statement.mentioning_articles.each do |article| %>
-          <%= render(partial: 'components/article_main', object: article, as: :article) %>
-        <% end %>
-      </div>
+    </a>
+    <div class="mt-2 text-center w-100">
+      <h3 class="fs-6 fs-bold">
+        <%= @statement.source_speaker.full_name %>
+      </h3>
     </div>
   </div>
-</section>
+  <div class="col col-12 col-md-8">
+    <blockquote class="p-3 fs-6 bg-dark text-white rounded-m mb-2 position-relative min-h-50px" data-target="statement--detail.blockquote">
+      <span class="popover-arrow arrow-east d-none d-md-block"></span>
+      <span class="popover-arrow arrow-north d-block d-md-none"></span>
+      <span class="fs-6 position-relative"><%= content_to_html(@statement.content) %></span>
+    </blockquote>
+    <div class="mb-10">
+      <cite><%= @statement.source.medium.name %>, <span class="date"><%= raw(l(@statement.source.released_at, format: :long)) %></span></cite>
+      <% if @statement.tags.size > 0 %>
+        <div class="d-flex align-items-center">
+          <svg class="me-2" width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M10.6211 0.9425L18.6536 8.9675C18.7239 9.03722 18.7797 9.12017 18.8178 9.21157C18.8558 9.30296 18.8754 9.40099 18.8754 9.5C18.8754 9.59901 18.8558 9.69704 18.8178 9.78843C18.7797 9.87983 18.7239 9.96278 18.6536 10.0325L17.1536 11.5325L16.0886 10.4675L17.0636 9.5L9.56359 2H3.87109V3.5H2.37109V2C2.37109 1.60218 2.52913 1.22064 2.81043 0.93934C3.09174 0.658035 3.47327 0.5 3.87109 0.5H9.56359C9.96078 0.501675 10.3411 0.660809 10.6211 0.9425ZM9.87109 21.5C9.77239 21.5006 9.67454 21.4817 9.58316 21.4443C9.49179 21.407 9.40867 21.352 9.33859 21.2825L1.31359 13.25C1.0319 12.97 0.872768 12.5897 0.871094 12.1925V6.5C0.871094 6.10218 1.02913 5.72064 1.31043 5.43934C1.59174 5.15804 1.97327 5 2.37109 5H8.06359C8.46078 5.00167 8.84108 5.16081 9.12109 5.4425L17.1536 13.4675C17.2239 13.5372 17.2797 13.6202 17.3178 13.7116C17.3558 13.803 17.3754 13.901 17.3754 14C17.3754 14.099 17.3558 14.197 17.3178 14.2884C17.2797 14.3798 17.2239 14.4628 17.1536 14.5325L10.4036 21.2825C10.3335 21.352 10.2504 21.407 10.159 21.4443C10.0676 21.4817 9.9698 21.5006 9.87109 21.5ZM2.37109 6.5V12.1925L9.87109 19.6925L15.5636 14L8.06359 6.5H2.37109ZM5.37109 11C6.19952 11 6.87109 10.3284 6.87109 9.5C6.87109 8.67157 6.19952 8 5.37109 8C4.54267 8 3.87109 8.67157 3.87109 9.5C3.87109 10.3284 4.54267 11 5.37109 11Z" fill="#111827"/>
+          </svg>
+
+          <% @statement.tags.each do |tag| %>
+            <div class="me-2"><%= tag.name %>,</div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+    <div class="d-flex align-items-center mb-10">
+      <h1 class="display-5 fw-bold me-3">Tento výrok byl ověřen jako</h1>
+      <div class="d-flex align-items-center" >
+        <span class="display-5 text-uppercase fw-bold <%= @statement.approved_assessment.veracity.default_name %>">
+          <%= @statement.approved_assessment.veracity.name.downcase %>
+        </span>
+      </div>
+    </div>
+    <% unless @statement.approved_assessment.short_explanation.nil? %>
+    <div class="separator bg-gray mb-10"></div>
+    <div class="mb-10">
+      <h3 class="display-5 fw-bold mb-5">Skrácené odůvodnění</h3>
+      <p class="fs-5"><%= @statement.approved_assessment.short_explanation %></p>
+    </div>
+    <% end %>
+    <div class="separator bg-gray mb-10"></div>
+    <div class="mb-10">
+      <h3 class="display-5 fw-bold mb-5">Plné odůvodnění</h3>
+      <div class="content fs-5">
+        <%= raw(@statement.approved_assessment.explanation_html) %>
+      </div>
+
+    </div>
+    <div class="separator bg-gray mb-10"></div>
+    <div class="">
+      <h3 class="display-5 fw-bold mb-5">Výrok jsme zmínili</h3>
+      <% @statement.mentioning_articles.each do |article| %>
+        <%= render(partial: 'components/article_main', object: article, as: :article) %>
+      <% end %>
+    </div>
+  </div>
+</div>
