--- a/app/views/components/_cookies.html.erb
+++ b/app/views/components/_cookies.html.erb
@@ -9,8 +9,8 @@
         <a class="text-dark text-underline link" href="/stranka/zasady-zpracovani-osobnich-udaju">Více o&nbsp;zpracování osobních údajů</a>
       </p>
       <div class="mt-4">
-        <button type="button me-4" class="btn" data-action="click->components--footer#accept">Souhlasím s&nbsp;cookies</button>
-        <button type="button"  class="btn outline" data-action="click->components--footer#reject">Nesouhlasím</button>
+        <button type="button me-4 my-2" class="btn" data-action="click->components--footer#accept">Souhlasím s&nbsp;cookies</button>
+        <button type="button my-2" class="btn outline" data-action="click->components--footer#reject">Nesouhlasím</button>
       </div>
     </div>
   </div>
