--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -3,15 +3,15 @@
 <footer class="footer py-10">
   <div class="container">
     <div class="mb-10">
-      <div class="row g-10">
+      <div class="row g-5 g-lg-10">
         <div class="col col-12 col-lg-7">
-          <div class="bg-secondary min-h-100 rounded-l  p-10">
+          <div class="bg-secondary min-h-100 rounded-l p-5 p-lg-10">
             <h2 class="small text-uppercase mb-2">Zůstaňte v kontaktu</h2>
             <p class="fs-2 mb-4">
               Každých pár týdnů posíláme newsletter se shrnutím naší práce a zajímavostmi ze zákulisí.
             </p>
             <form class="subscribe-to-newsletter-form" action="https://demagog.us4.list-manage.com/subscribe/post" method="POST">
-              <div class="d-flex">
+              <div class="d-flex flex-wrap">
                 <div class="w-100 me-4">
                   <input type="hidden" name="u" value="55104956ab8c4db41d4cd7e55">
                   <input type="hidden" name="id" value="f2c56d2e38">
@@ -20,7 +20,7 @@
                     Stisknutím „Začít odebírat‟ souhlasíte se zpracováním e-mailu dle <br><a class="text-dark" href="/stranka/zasady-zpracovani-osobnich-udaju">Zásad zpracování osobních údajů</a>.
                   </div>
                 </div>
-                <div class="min-w-150px">
+                <div class="min-w-150px mt-5 mt-lg-0">
                   <button type="submit" class="btn w-100">Začít odebírat</button>
                 </div>
               </div>
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class="col col-12 col-lg-5">
-          <div class="bg-primary min-h-100 rounded-l  p-10">
+          <div class="bg-primary min-h-100 rounded-l p-5 p-lg-10">
             <h2 class="small text-uppercase mb-2">Sociální sítě</h2>
             <p class="fs-2">
               Nenechte si ujít nejnovější události z Demagog.cz. Sdílením našich příspěvku přátelům podpodpoříte naši práci.
@@ -60,7 +60,7 @@
         </div>
       </div>
     </div>
-    <div class="bg-dark text-white p-10 rounded-l my-5">
+    <div class="bg-dark text-white p-5 p-lg-10 rounded-l my-5">
       <div class="row g-5">
         <div class="col col-12 col-md-6 col-lg-4">
           <h4 class="fs-5 mb-4">Demagog.cz, z.s</h4>
