--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -3,8 +3,8 @@
 <div class="row gx-5 gx-lg-5 flex-lg-row-reverse" data-controller="components--modal">
   <% if @page_number.blank? %>
   <div class="col col-12 col-lg-4">
-    <div class="d-flex align-items-center mb-10">
-      <span class="fs-7 fw-bold text-uppercase me-5">Nejvyhledávanější</span>
+    <div class="d-flex flex-wrap align-items-center mb-10">
+      <span class="fs-7 fw-bold text-uppercase me-5 my-2">Nejvyhledávanější</span>
       <div class="symbol-group">
         <% for speaker in @most_searched_speakers %>
           <span class="symbol symbol-45px rounded-circle bg-gray-500 overflow-hidden">
@@ -144,7 +144,7 @@
 
 </div>
 
-<div class="bg-light text-dark p-10 rounded-l mt-10">
+<div class="bg-light text-dark p-5 p-lg-10 rounded-l mt-10">
   <div class="row g-10 justify-content-between">
     <div class="col col-12 col-lg-5">
       <h2 class="display-5 mb-5 fw-bold">Workshopy</h2>
