--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -14,7 +14,7 @@
         <% end %>
       </div>
     </div>
-    <div class="bg-dark text-white p-8 rounded-l mb-10">
+    <div class="bg-dark text-white p-lg-8 rounded-l mb-10">
       <div class="">
         <h2 class="mb-4">Co je Demagog.cz?</h2>
         <div class="fs-6 mb-10">
@@ -39,7 +39,7 @@
         </a>
       </div>
     </div>
-    <div class="bg-light text-dark p-8 rounded-l d-none d-lg-flex">
+    <div class="bg-light text-dark p-5 p-lg-8 rounded-l d-none d-lg-flex">
       <div class="w-100">
         <div class="mb-4">
           <h2 class="fs-2">Podpořte Demagog.cz</h2>
