--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -10,7 +10,7 @@
   <div class="">
     <div class="d-flex my-10">
       <% @promise_rating_keys.each do |promise_rating_key| %>
-        <div class="d-flex align-items-center me-10">
+        <div class="d-flex flex-wrap align-items-center me-10">
           <% if promise_rating_key == "fulfilled" %>
             <span class="w-30px h-30px d-flex align-items-center justify-content-center bg-primary rounded-circle me-2">
               <svg width="17" height="13" viewBox="0 0 17 13" fill="none" xmlns="http://www.w3.org/2000/svg">
